# Python-CW-Notebook

./: Day 4 dictionary.py  Day1-turtle.py  Day1.py  Day2-modules456.py  Day2-turtle.py  Fibonacci Seq.py  Fibonnaci Check.py  GROK Dicts.py  GROK files.py  HBD Colorful.py  ListListDict.py  MW-Dict.py  MW-madlibs.py  Moodle Nested Dict HW.py  Named Dict and Anony DIcts .py  PCC_Classes1.py  PCC_classes_restaurants.py  Prime Check - For-Else.py  Prime Check - traditional.py  SIP Graph plan.txt  Single Line from PDF SIP.py  TMDB API Calls.py  Tweet Post API.py  Twitter API test.py  Twitter APIs Calls.py  Twitter Query creation.py  ZDate arithmetic example.py  config.yaml  emoji translator.py  even count function.py  exception handling.py  firework function.py  function & class test.py  greatest number-list.py  greek flag functions if.py  guessing game.py  input.json  input.txt  loops dandelion function.py  main.py  (+22 more)
