[tool.poetry]
name = "python-cw-notebook"
version = "0.1.0"
description = ""
authors = ["SidharthJoshi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
requests-oauthlib = "^1.3.1"
PyPDF4 = "^1.27.0"
tweepy = "^4.6.0"
pandas = "^1.4.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
